--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
-.App {
+.App{
+  background: linear-gradient(45deg, rgb(112, 5, 243), rgb(242, 25, 202));
+width: 70vw;
+height: auto;
+margin: 30px auto;
+display: flex;
+border-radius:20px ;
+justify-content: center;
+}
+
+.card {
+  height: 500px;
+  width: 400px;
+  margin: 70px 20px;
+  border-radius: 10px;
+  box-shadow: 0px 8px 12px #00000035;
+}
+
+.card>h2 {
   text-align: center;
+  padding-top: 20px;
+  color: white;
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.585);
+  letter-spacing: .8px;
+
+}
+.temphumid{
+  display: flex;
+}
+.temphumid > b{
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 15px;
+  text-align: center;
+  color: whitesmoke;
+  font-size: larger;
+  text-shadow: 0px 2px 2px black;
+  letter-spacing: .8px;
+}
+#input {
+  padding: 10px;
+  margin: 15% auto 20px auto;
+  display: block;
+  border-radius: 30px;
+  border: none;
+  width: 60%;
+  height: 40px;
+  outline: none;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.display_temp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.display_temp > b {
+ font-size: larger;
+ text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.226);
+}
+.display_temp > b:last-child {
+ font-size: 25px;
+ text-shadow: 0px 3px 4px rgba(255, 255, 255, 0.384);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#img {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  width: 80px;
+  height: 80px;
+  background-color: aliceblue;
+  border-radius: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.tempsun{
+  display: flex;
+  justify-content: center;
+}
+.tempsun > div{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.tempsun > div > b{
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 15px;
+  text-align: center;
+  text-shadow: 0px 2px 2px black;
+  letter-spacing: 0.8px;
+ 
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.tempsun > div > b:nth-child(1){
+  color: yellow;
+}
+.tempsun > div > b:nth-child(2){
+  color: rgb(0, 234, 255);
+}
+.forecastchild{
+  text-align: center;
+  margin-top: 30px;
+  
+}
+.forecastchild > b{
+  text-align: center;
+  margin-top: 50px;
+  font-size: larger;
+  text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.189);
+}
+@media screen and (max-width:650px) {
+  .App{
+    background: linear-gradient(45deg, rgb(112, 5, 243), rgb(242, 25, 202));
+    width: 100%;
+    height: 100%;
+    margin:  auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 0px;
   }
-  to {
-    transform: rotate(360deg);
+  .card {
+    height: 50%;
+    min-height: fit-content;
+    width: 80%;
+    margin: 40px auto;
+    border-radius: 10px;
+    box-shadow: 0px 8px 12px #00000035;
+    padding-bottom:10px ;
+  }
+}
+@media screen and (max-width:850px) and (min-width:650px)   {
+  .App{
+    background: linear-gradient(45deg, rgb(112, 5, 243), rgb(242, 25, 202));
+    width: 100%;
+    height: 100%;
+    margin:  auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 100vh;
+    border-radius: 0px;
+  }
+  .card {
+    height: fit-content;
+    width: 60%;
+    margin: 30px auto;
+    padding-bottom:20px ;
+    border-radius: 10px;
+    box-shadow: 0px 8px 12px #00000035;
   }
 }
